--- a/background/background.html
+++ b/background/background.html
@@ -10,22 +10,24 @@
   <link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet">
   <style>
    
-    html {
+    html, body {
       height: 100%;
       margin: 0;
-    }   
-      
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      display: flex;
-      height: 100vh;
+      padding: 0;
+      overflow: hidden;
     }
+
+    body {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
     .container {
       height: 100%;
         display: flex;
       width: 100%;
-      max-width: 1200px;
+      max-width: 1400px;
       margin: 0 auto;
       height: 100vh;
       overflow: hidden; 
