--- a/background/background.html
+++ b/background/background.html
@@ -28,7 +28,7 @@
       height: 100%;
         display: flex;
       width: 100%;
-      max-width: 1400px;
+/*      max-width: 1400px;*/
       margin: 0 auto;
       height: 100vh;
       overflow: hidden; 
