--- a/background/background.html
+++ b/background/background.html
@@ -65,7 +65,7 @@
     #submit {
       padding: 10px 20px;
       font-size: 16px;
-      background-color: #5c3fc1;
+      background-color: #f36b1c;
       color: white;
       border: none;
       border-radius: 5px;
@@ -129,7 +129,7 @@
       left: 50%;
       transform: translate(-50%, -50%);
       /* 你已有的样式继续保留： */
-      background-color: #dcd0c3;
+/*      background-color: #dcd0c3;*/
       border: 2px solid #f36b1c;
       border-radius: 12px;
       padding: 30px;
@@ -192,7 +192,7 @@
         </p>
 
         <p class="instruction">
-          🖱️ <span style="color: #f36b1c;">
+          🖱️ <span style="color: #5c3fc1;">
             Click either bar to adjust your guess. Then submit to see the research result.
           </span>
         </p>
