--- a/london-tourism-site/index.html
+++ b/london-tourism-site/index.html
@@ -27,14 +27,14 @@
         <li class="nav-dropdown">
           <a href="#" class="nav-link">Attractions ▾</a>
           <ul class="dropdown-menu">
-            <li><a href="#uk-attraction" class="nav-link">UK Attraction</a></li>
+            <li><a href="#uk-attraction" class="nav-link">Attractions in England</a></li>
             <li><a href="#chart-statistics" class="nav-link">Chart Statistics</a></li>
-            <li><a href="#london-attraction" class="nav-link">London Attraction</a></li>
+            <li><a href="#london-attraction" class="nav-link">London Isochrone Map</a></li>
           </ul>
         </li>
 
         <li><a href="#personalised-trip"class="nav-link">Personalised Trip</a></li>
-        <li><a href="#team"class="nav-link">Team</a></li>
+        <li><a href="#team"class="nav-link">Recap & Team</a></li>
       </ul>
     </nav>
   </header>
@@ -69,7 +69,7 @@
       <iframe src="https://yuli61.github.io/Group_visual/london_travel_guidepage/interaction_travel_page.html" frameborder="0"></iframe>
     </div>
     <div class="section" data-anchor="team">
-      <iframe src="https://yuli61.github.io/Group_visual/team/" frameborder="0"></iframe>
+      <iframe src="team/index.html" frameborder="0"></iframe>
     </div>
   </div>
 
