--- a/london-tourism-site/team/index.html
+++ b/london-tourism-site/team/index.html
@@ -242,7 +242,7 @@ iframe::-webkit-scrollbar {
         </a>
 
         <a href="#" onclick="window.parent.fullpage_api.moveTo('uk-attraction'); return false;">
-        <img src="assets/images/flow.png" alt="Job Density" />
+        <img src="assets/images/UK.png" alt="Job Density" />
         <p>Attractions in England<br><span>KUNDI WANG</span></p>
         </a>
 
@@ -252,7 +252,7 @@ iframe::-webkit-scrollbar {
         </a>
         
         <a href="#" onclick="window.parent.fullpage_api.moveTo('personalised-trip'); return false;">
-        <img src="assets/images/Isochrone.png" alt="Personalised Trip" />
+        <img src="assets/images/demo.gif" alt="Personalised Trip" />
         <p>Personalised Trip<br><span>YITING CHEN</span></p>
         </a>
 
@@ -269,7 +269,7 @@ iframe::-webkit-scrollbar {
 <div class="team-grid">
 
   <div class="team-card">
-    <img src="assets/images/dog.jpg" alt="YI LIU" />
+    <img src="assets/images/ly.jpg" alt="YI LIU" />
     <div class="overlay">
       <p class="name">YI LIU</p>
       <div class="social-icons">
@@ -284,7 +284,7 @@ iframe::-webkit-scrollbar {
   </div>
 
   <div class="team-card">
-    <img src="assets/images/dog.jpg" alt="KUNDI WANG" />
+    <img src="assets/images/wkd.jpg" alt="KUNDI WANG" />
     <div class="overlay">
       <p class="name">KUNDI WANG</p>
       <div class="social-icons">
@@ -299,7 +299,7 @@ iframe::-webkit-scrollbar {
   </div>
 
   <div class="team-card">
-    <img src="assets/images/dog.jpg" alt="YITING CHEN" />
+    <img src="assets/images/cyt.jpg" alt="YITING CHEN" />
     <div class="overlay">
       <p class="name">YITING CHEN</p>
       <div class="social-icons">
