--- a/fight_flow/index.html
+++ b/fight_flow/index.html
@@ -21,7 +21,7 @@
         This panel shows the trend of international visitors to London from 2002 to 2020. 
         The number of visitors grew steadily over time. 
         Although there was a sharp drop in 2020 due to the COVID-19 pandemic, the numbers began to recover soon after. 
-        This highlights London’s strong appeal to global tourists and the important role tourism plays in the city’s economy.</p>
+        This highlights London's strong appeal to global tourists and the important role tourism plays in the city's economy.</p>
     </div>
 
     <div id="chart-container">
@@ -31,7 +31,7 @@
     <!-- 在 index.html 的 timeline-controls 部分添加年份显示 -->
     <div id="timeline-controls">
       <button id="play-btn">▶</button>
-      <input type="range" id="year-slider" min="2002" max="2020" step="1" value="2002">
+      <input type="range" id="year-slider" min="2002" max="2023" step="1" value="2002">
       <span id="year-label">2002</span> <!-- 添加此处 -->
     </div>
 
