--- a/fight_flow/index.html
+++ b/fight_flow/index.html
@@ -18,10 +18,10 @@
       <h2>International Flow to London</h2>
       <hr />
       <p class="panel-description">
-        This panel shows the trend of international visitors to London from 2002 to 2020. 
-        The number of visitors grew steadily over time. 
-        Although there was a sharp drop in 2020 due to the COVID-19 pandemic, the numbers began to recover soon after. 
-        This highlights London's strong appeal to global tourists and the important role tourism plays in the city's economy.</p>
+      This panel shows the trend of international visitors to London from 2002 to 2023.
+      Please note that data for 2020 is unavailable.
+      Over time, the number of visitors generally increased, reflecting London's strong appeal to global tourists.
+      Despite the disruption caused by the COVID-19 pandemic, the following years saw a steady recovery in tourism, underscoring the sector's resilience and its vital role in the city's economy.</p>
     </div>
 
     <div id="chart-container">
@@ -43,8 +43,8 @@
 
       <p id="source" style="margin-top: 20rem; font-size: 0.85rem; color: #888; text-align: center;">
         Source: 
-        <a href="https://data.london.gov.uk/dataset/number-international-visitors-london" target="_blank" style="color: #888; text-decoration: underline;">
-          Number of International Visitors to London(ONS)
+        <a href="https://www.visitbritain.org/research-insights/inbound-visits-and-spend-annual-regional" target="_blank" style="color: #888; text-decoration: underline;">
+          VisitBritain-Inbound Visits and Spend (Annual, Regional)
         </a>
       </p>
 
