--- a/london-tourism-site/team/index.html
+++ b/london-tourism-site/team/index.html
@@ -267,51 +267,51 @@ iframe::-webkit-scrollbar {
 
   <div class="team-visual-wrapper">
 <div class="team-grid">
-
-  <div class="team-card">
-    <img src="assets/images/ly.jpg" alt="YI LIU" />
-    <div class="overlay">
-      <p class="name">YI LIU</p>
-      <div class="social-icons">
-        <a href="sixandone115@163.com" target="_blank">
-          <i class="fas fa-envelope"></i>
-        </a>
-        <a href="https://github.com/YULI61" target="_blank">
-          <i class="fab fa-github"></i>
-        </a>
-      </div>
+<div class="team-card">
+  <img src="assets/images/ly.jpg" alt="YI LIU" />
+  <div class="overlay">
+    <p class="name">YI LIU</p>
+    <div class="social-icons">
+      <a title="sixandone115@163.com">
+        <i class="fas fa-envelope"></i>
+      </a>
+      <a href="https://github.com/YULI61" target="_blank">
+        <i class="fab fa-github"></i>
+      </a>
     </div>
   </div>
+</div>
 
-  <div class="team-card">
-    <img src="assets/images/wkd.jpg" alt="KUNDI WANG" />
-    <div class="overlay">
-      <p class="name">KUNDI WANG</p>
-      <div class="social-icons">
-        <a href="wangkundi99@163.com" target="_blank">
-          <i class="fas fa-envelope"></i>
-        </a>
-        <a href="https://github.com/kundiwang" target="_blank">
-          <i class="fab fa-github"></i>
-        </a>
-      </div>
+<div class="team-card">
+  <img src="assets/images/wkd.jpg" alt="KUNDI WANG" />
+  <div class="overlay">
+    <p class="name">KUNDI WANG</p>
+    <div class="social-icons">
+      <a title="wangkundi99@163.com">
+        <i class="fas fa-envelope"></i>
+      </a>
+      <a href="https://github.com/kundiwang" target="_blank">
+        <i class="fab fa-github"></i>
+      </a>
     </div>
   </div>
+</div>
 
-  <div class="team-card">
-    <img src="assets/images/cyt.jpg" alt="YITING CHEN" />
-    <div class="overlay">
-      <p class="name">YITING CHEN</p>
-      <div class="social-icons">
-        <a href="chenyiting1003@163.com" target="_blank">
-          <i class="fas fa-envelope"></i>
-        </a>
-        <a href=" https://github.com/chenyiting1003" target="_blank">
-          <i class="fab fa-github"></i>
-        </a>
-      </div>
+<div class="team-card">
+  <img src="assets/images/cyt.jpg" alt="YITING CHEN" />
+  <div class="overlay">
+    <p class="name">YITING CHEN</p>
+    <div class="social-icons">
+      <a title="chenyiting1003@163.com">
+        <i class="fas fa-envelope"></i>
+      </a>
+      <a href="https://github.com/chenyiting1003" target="_blank">
+        <i class="fab fa-github"></i>
+      </a>
     </div>
   </div>
+</div>
+
 
 </div>
 
