--- a/london_travel_guidepage/interaction_travel_page.html
+++ b/london_travel_guidepage/interaction_travel_page.html
@@ -10,26 +10,19 @@
 <body>
 
 <div class="main-container">
-  <!-- 左侧聊天区域 -->
   <div class="chat-panel" id="chat-panel">
-    
-    <!-- 聊天气泡区域 -->
     <div class="chat-wrapper" id="chat-wrapper">
-      <!-- 聊天气泡内容由 JS 插入 -->
     </div>
-
-    <!-- 输入框区域应该放在聊天容器之后（底部） -->
     <div class="input-bar">
       <input type="text" id="user-input" placeholder="..." disabled />
       <button id="reply-btn" class="send-btn">
         <i class="fas fa-paper-plane"></i>
     </button>
-
     </div>
 
   </div>
 
-  <!-- 右侧区域 -->
+  <!-- right -->
 <div class="animation-panel">
   <div class="animation-text">
     <h2>Explore London, In Your Way!</h2>
@@ -52,7 +45,7 @@
 </div>
 
 
-<!-- 地图导览页面：嵌入 React 应用 -->
+<!-- left react -->
 <section id="guide-section">
   <iframe
     src="https://casa0003.vercel.app/"
